toggle poly mgmt UI with checkbox in hte side UI (+2 squashed commits) Squashed commits: [bee556c] fixed button hiding feature [f9e396a] added remove mode for a single polygon, some renaming/reorg

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -122,7 +122,7 @@ button {
   padding-top: 15px;
 }
 
-input {
+input[type=text] {
   width: 100%;
 }
 
